--- a/ejemplos/template-premium.html
+++ b/ejemplos/template-premium.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aura Pro - The pinnacle of design and performance. For those who demand excellence.">
-    <title>Aura Pro | Where Design Meets Performance</title>
+    <meta name="description" content="Neo Pro - The pinnacle of design and performance. For those who demand excellence.">
+    <title>Neo Pro | Where Design Meets Performance</title>
     <style>
         * {
             margin: 0;
@@ -617,13 +617,13 @@
 <body>
     <!-- Loading Screen -->
     <div class="loader" id="loader">
-        <div class="loader-text">AURA PRO</div>
+        <div class="loader-text">Neo PRO</div>
     </div>
 
     <!-- Header -->
     <header>
         <div class="nav-container">
-            <a href="#" class="logo">AURA</a>
+            <a href="#" class="logo">Neo</a>
             <ul class="nav-menu">
                 <li><a href="#design">Design</a></li>
                 <li><a href="#performance">Performance</a></li>
@@ -640,7 +640,7 @@
         </video>
         <div class="hero-content">
             <div class="hero-label">THE ULTIMATE EXPRESSION</div>
-            <h1 class="hero-title">Aura Pro</h1>
+            <h1 class="hero-title">Neo Pro</h1>
             <p class="hero-subtitle">
                 Where design meets performance. Crafted for those who refuse to compromise. 
                 Experience technology reimagined through the lens of artistry.
@@ -658,7 +658,7 @@
             <h2 class="section-title">Uncompromising Design</h2>
             <p class="section-text">
                 Every curve, every surface, every material choice is a deliberate act of creation. 
-                Aura Pro represents the pinnacle of industrial design, where form follows function 
+                Neo Pro represents the pinnacle of industrial design, where form follows function 
                 with elegant precision.
             </p>
         </div>
@@ -784,11 +784,11 @@
 
     <!-- Final CTA -->
     <section class="cta-section">
-        <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80" alt="Aura Pro" class="cta-bg">
+        <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80" alt="Neo Pro" class="cta-bg">
         <div class="cta-content">
             <h2 class="cta-title">Begin Your Journey</h2>
             <p class="cta-text">
-                Aura Pro is more than a device—it's an extension of your creativity, 
+                Neo Pro is more than a device—it's an extension of your creativity, 
                 a partner in your workflow, a statement of your standards. Experience 
                 technology elevated to an art form.
             </p>
@@ -803,7 +803,7 @@
                 <div class="footer-col">
                     <h4>Product</h4>
                     <ul>
-                        <li><a href="#">Aura Pro</a></li>
+                        <li><a href="#">Neo Pro</a></li>
                         <li><a href="#">Accessories</a></li>
                         <li><a href="#">Compare</a></li>
                         <li><a href="#">Configure</a></li>
@@ -830,7 +830,7 @@
                 <div class="footer-col">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="#">About Aura</a></li>
+                        <li><a href="#">About Neo</a></li>
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Sustainability</a></li>
                         <li><a href="#">Press</a></li>
@@ -838,7 +838,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 Aura. All rights reserved. | Designed with intention.</p>
+                <p>&copy; 2026 Neo. All rights reserved. | Designed with intention.</p>
             </div>
         </div>
     </footer>
