--- a/ejemplos-amazon.html
+++ b/ejemplos-amazon.html
@@ -489,7 +489,7 @@
           <h3>Template Sport</h3>
           <p>Diseño dinámico y energético para productos deportivos, ropa de entrenamiento y equipamiento fitness. Optimizado para destacar rendimiento y tecnología.</p>
           <div class="card-footer">
-            <button class="btn template-sport" onclick="window.location.href='template-sport.html'">
+            <button class="btn template-sport" onclick="window.location.href='ejemplos/template-sport.html'">
               <i class="fas fa-running btn-icon"></i>
               Ver Template
             </button>
@@ -508,7 +508,7 @@
           <h3>Template Tech</h3>
           <p>Diseño futurista para productos tecnológicos, electrónica y gadgets. Especializado en mostrar especificaciones técnicas y features innovadores.</p>
           <div class="card-footer">
-            <button class="btn template-tech" onclick="window.location.href='template-tech.html'">
+            <button class="btn template-tech" onclick="window.location.href='ejemplos/template-tech.html'">
               <i class="fas fa-microchip btn-icon"></i>
               Ver Template
             </button>
@@ -527,7 +527,7 @@
           <h3>Template Eco</h3>
           <p>Diseño sustentable para productos eco-friendly, orgánicos y de impacto positivo. Enfatiza materiales, procesos y beneficios ambientales.</p>
           <div class="card-footer">
-            <button class="btn template-eco" onclick="window.location.href='template-eco.html'">
+            <button class="btn template-eco" onclick="window.location.href='ejemplos/template-eco.html'">
               <i class="fas fa-leaf btn-icon"></i>
               Ver Template
             </button>
@@ -546,7 +546,7 @@
           <h3>Template Premium</h3>
           <p>Diseño de lujo para productos premium, exclusivos y de alta gama. Enfocado en elegancia, calidad superior y experiencia de usuario refinada.</p>
           <div class="card-footer">
-            <button class="btn template-premium" onclick="window.location.href='template-premium.html'">
+            <button class="btn template-premium" onclick="window.location.href='ejemplos/template-premium.html'">
               <i class="fas fa-gem btn-icon"></i>
               Ver Template
             </button>
