--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -654,7 +654,7 @@
         <div class="container">
             <nav class="navbar">
                 <a href="#" class="logo">
-                    <i class="fas fa-palette"></i> NeoProd<span>Ux</span>
+                   NeoProd<span>Ux</span>
                 </a>
                 
                 <ul class="nav-links">
