--- a/index.html
+++ b/index.html
@@ -1101,16 +1101,32 @@
     </nav>
 
     <!-- Contenido central -->
-    <div class="hero-main-content">
-      <h1>Diseño UX/UI pensado para escalar</h1>
-      <p>Diseños premium creadas con criterio de producto. Claridad, foco y decisiones bien tomadas desde el inicio.</p>
-      
-      <a href="#casos" class="btn-acceder">
-        VER CASOS
-      </a>
-    </div>
+<div class="hero-main-content">
+  <h1>Diseño UX/UI que convierte visitas en clientes</h1>
+  <p>
+    Ayudo a startups y negocios digitales a mejorar conversión, claridad y experiencia de usuario
+    con diseño basado en datos y buenas prácticas reales.
+  </p>
+
+  <div class="hero-cta-group">
+    <a href="#contacto" class="btn-acceder">
+      Solicitar auditoría UX
+    </a>
+
+    <a href="#casos" class="btn-secondary">
+      Ver casos reales
+    </a>
   </div>
-</section>
+
+  <!-- Bullets JUSTO debajo del CTA -->
+  <ul class="hero-benefits">
+    <li>Auditorías UX accionables</li>
+    <li>Rediseños enfocados en conversión</li>
+    <li>Casos reales con métricas</li>
+  </ul>
+</div>
+
+
 
 <!-- Sección de Casos de Estudio - Estilo Apple -->
 <section class="cases-section" id="casos">
