Refactor central content in index.html
Updated the central content section to streamline the text and remove unnecessary elements.

--- a/index.html
+++ b/index.html
@@ -1100,31 +1100,17 @@
       </div>
     </nav>
 
-    <!-- Contenido central -->
-<div class="hero-main-content">
-  <h1>Diseño UX/UI que convierte visitas en clientes</h1>
-  <p>
-    Ayudo a startups y negocios digitales a mejorar conversión, claridad y experiencia de usuario
-    con diseño basado en datos y buenas prácticas reales.
-  </p>
-
-  <div class="hero-cta-group">
-    <a href="#contacto" class="btn-acceder">
-      Solicitar auditoría UX
-    </a>
-
-    <a href="#casos" class="btn-secondary">
-      Ver casos reales
-    </a>
+    hazme los cambios <!-- Contenido central -->
+    <div class="hero-main-content">
+      <h1>Diseño UX/UI que convierte visitas en clientes</h1>
+      <p>Ayudo a startups y negocios digitales a mejorar conversión, claridad y experiencia de usuario con diseño basado en datos y buenas prácticas reales.</p>
+      
+      <a href="#casos" class="btn-acceder">
+        Solicitar auditoría UX
+      </a>
+    </div>
   </div>
-
-  <!-- Bullets JUSTO debajo del CTA -->
-  <ul class="hero-benefits">
-    <li>Auditorías UX accionables</li>
-    <li>Rediseños enfocados en conversión</li>
-    <li>Casos reales con métricas</li>
-  </ul>
-</div>
+</section>
 
 
 
