--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="NeoProdUx">
   <meta property="og:title" content="NeoProdUx - Diseño UX/UI que convierte">
   <meta property="og:description" content="Transformamos visitas en clientes con diseño basado en datos">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1558655146-364adaf1fcc9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80">
+  <meta property="og:image" content="background-glass.jpg">
   <meta property="og:url" content="https://neoprodux.com">
   
   <!-- Preconnect para mejorar velocidad -->
