Fix link for Diseño UX/UI in footer section

--- a/index.html
+++ b/index.html
@@ -2012,7 +2012,7 @@
       <div class="footer-section">
         <h3>Servicios</h3>
         <ul>
-          <li><a href="#servicios">Diseño UX/UI</a></li>
+          <li><a href="#servicios">Diseño UX/UI</a>ui-ux-design.html</li>
           <li><a href="#servicios">Estrategia de Producto</a></li>
           <li><a href="#servicios">Design Systems</a></li>
           <li><a href="#servicios">Apps Móviles</a></li>
