--- a/index.html
+++ b/index.html
@@ -87,18 +87,9 @@
        HERO SECTION - Optimizado
        ============================== */
     .hero-container {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      /* Imagen de fondo específica */
-      background: 
-        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)),
-        url('background-glass.jpg') center/cover no-repeat;
-      position: relative;
-      overflow: hidden;
-    }
+  background: 
+    url('background-glass.jpg') center/cover no-repeat; /* ← Sin gradiente */
+}
 
     /* Efecto de partículas sutil */
     .hero-container::before {
