Update footer links to point to specific pages

--- a/index.html
+++ b/index.html
@@ -2493,11 +2493,11 @@
       <div class="footer-section">
         <h3>Servicios</h3>
         <ul>
-          <li><a href="#servicios">Diseño UX/UI</a></li>
+          <li><a href="ui-ux-design.html">Diseño UX/UI</a></li>
           <li><a href="#servicios">Estrategia de Producto</a></li>
           <li><a href="#servicios">Design Systems</a></li>
-          <li><a href="#servicios">Apps Móviles</a></li>
-          <li><a href="#servicios">Desarrollo Web</a></li>
+          <li><a href="mobile-app-design.html">Apps Móviles</a></li>
+          <li><a href="website-design.html">Desarrollo Web</a></li>
         </ul>
       </div>
       
